--- a/sentiment-analysis/sentiment-analysis.ipynb
+++ b/sentiment-analysis/sentiment-analysis.ipynb
@@ -74,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:36:42.833900Z",
-     "start_time": "2025-02-09T11:36:41.581255Z"
+     "end_time": "2025-02-09T16:00:32.491128Z",
+     "start_time": "2025-02-09T16:00:30.952931Z"
     }
    },
    "id": "a7763f3e01743eae"
@@ -105,8 +105,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:36:44.703Z",
-     "start_time": "2025-02-09T11:36:44.697828Z"
+     "end_time": "2025-02-09T16:00:35.893726Z",
+     "start_time": "2025-02-09T16:00:35.887146Z"
     }
    },
    "id": "220519c34255d631"
@@ -133,8 +133,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:36:47.777830Z",
-     "start_time": "2025-02-09T11:36:47.249148Z"
+     "end_time": "2025-02-09T16:00:36.856881Z",
+     "start_time": "2025-02-09T16:00:36.311828Z"
     }
    },
    "id": "8f4e30350eb43672"
@@ -170,8 +170,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:36:48.901236Z",
-     "start_time": "2025-02-09T11:36:48.885154Z"
+     "end_time": "2025-02-09T16:00:37.336698Z",
+     "start_time": "2025-02-09T16:00:37.325958Z"
     }
    },
    "id": "6afe33a227773bc4"
@@ -197,8 +197,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:36:49.750544Z",
-     "start_time": "2025-02-09T11:36:49.746979Z"
+     "end_time": "2025-02-09T16:00:37.886067Z",
+     "start_time": "2025-02-09T16:00:37.876288Z"
     }
    },
    "id": "c75ec4ac48fc33ec"
@@ -223,8 +223,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:36:50.429097Z",
-     "start_time": "2025-02-09T11:36:50.422436Z"
+     "end_time": "2025-02-09T16:00:38.381433Z",
+     "start_time": "2025-02-09T16:00:38.377392Z"
     }
    },
    "id": "fd68d68965d70938"
@@ -259,8 +259,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:36:51.407760Z",
-     "start_time": "2025-02-09T11:36:51.402773Z"
+     "end_time": "2025-02-09T16:00:39.016459Z",
+     "start_time": "2025-02-09T16:00:39.012428Z"
     }
    },
    "id": "50c479ea5e1ba176"
@@ -313,8 +313,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:36:54.241825Z",
-     "start_time": "2025-02-09T11:36:54.238810Z"
+     "end_time": "2025-02-09T16:00:40.301891Z",
+     "start_time": "2025-02-09T16:00:40.298230Z"
     }
    },
    "id": "9598288e6ea6c458"
@@ -330,8 +330,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:36:55.279721Z",
-     "start_time": "2025-02-09T11:36:55.270879Z"
+     "end_time": "2025-02-09T16:00:40.820291Z",
+     "start_time": "2025-02-09T16:00:40.814661Z"
     }
    },
    "id": "71e79d14c425124a"
@@ -366,8 +366,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:36:56.033324Z",
-     "start_time": "2025-02-09T11:36:56.023814Z"
+     "end_time": "2025-02-09T16:00:41.325125Z",
+     "start_time": "2025-02-09T16:00:41.305398Z"
     }
    },
    "id": "2676069477b0bf9f"
@@ -394,8 +394,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:37:36.626018Z",
-     "start_time": "2025-02-09T11:36:56.792172Z"
+     "end_time": "2025-02-09T16:01:23.729147Z",
+     "start_time": "2025-02-09T16:00:41.648648Z"
     }
    },
    "id": "d0b7d8a242838a2b"
@@ -420,8 +420,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:37:36.840365Z",
-     "start_time": "2025-02-09T11:37:36.640112Z"
+     "end_time": "2025-02-09T16:01:23.952533Z",
+     "start_time": "2025-02-09T16:01:23.731795Z"
     }
    },
    "id": "4f6ac0fab19309bd"
@@ -454,8 +454,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:37:36.962552Z",
-     "start_time": "2025-02-09T11:37:36.841300Z"
+     "end_time": "2025-02-09T16:01:24.087943Z",
+     "start_time": "2025-02-09T16:01:23.953456Z"
     }
    },
    "id": "9cdc563cdab5f357"
@@ -502,8 +502,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:37:36.969675Z",
-     "start_time": "2025-02-09T11:37:36.966283Z"
+     "end_time": "2025-02-09T16:01:24.095222Z",
+     "start_time": "2025-02-09T16:01:24.088505Z"
     }
    },
    "id": "c8b2be4eb28af0fa"
@@ -519,8 +519,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:37:36.977896Z",
-     "start_time": "2025-02-09T11:37:36.970549Z"
+     "end_time": "2025-02-09T16:01:24.102628Z",
+     "start_time": "2025-02-09T16:01:24.097597Z"
     }
    },
    "id": "ace45906e9ab73f5"
@@ -548,8 +548,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:37:40.288952Z",
-     "start_time": "2025-02-09T11:37:37.008235Z"
+     "end_time": "2025-02-09T16:01:27.612318Z",
+     "start_time": "2025-02-09T16:01:24.104490Z"
     }
    },
    "id": "3e32cf8dbd5ae59c"
@@ -596,8 +596,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:37:40.549471Z",
-     "start_time": "2025-02-09T11:37:40.309370Z"
+     "end_time": "2025-02-09T16:01:27.859225Z",
+     "start_time": "2025-02-09T16:01:27.613862Z"
     }
    },
    "id": "fc181e33c82b4e6d"
@@ -625,8 +625,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:37:59.674933Z",
-     "start_time": "2025-02-09T11:37:40.618184Z"
+     "end_time": "2025-02-09T16:01:46.679639Z",
+     "start_time": "2025-02-09T16:01:27.922018Z"
     }
    },
    "id": "12c89f0f7d2f9a1e"
@@ -673,8 +673,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:38:00.017885Z",
-     "start_time": "2025-02-09T11:37:59.692500Z"
+     "end_time": "2025-02-09T16:01:47.007011Z",
+     "start_time": "2025-02-09T16:01:46.686590Z"
     }
    },
    "id": "aac345d987ddd33c"
@@ -702,15 +702,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:38:27.481010Z",
-     "start_time": "2025-02-09T11:38:00.026232Z"
+     "end_time": "2025-02-09T16:02:15.793271Z",
+     "start_time": "2025-02-09T16:01:47.059362Z"
     }
    },
    "id": "1ebec6fa18546ddd"
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
@@ -745,13 +745,16 @@
     "\n",
     "# Adjust layout\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# lets save it for the readme\n",
+    "fig.savefig('ngram_analysis.svg')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:38:27.842100Z",
-     "start_time": "2025-02-09T11:38:27.493396Z"
+     "end_time": "2025-02-09T16:05:29.592311Z",
+     "start_time": "2025-02-09T16:05:29.247758Z"
     }
    },
    "id": "a3a70acf7b99d1ff"
@@ -790,8 +793,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:43:33.009523Z",
-     "start_time": "2025-02-09T11:43:33.005072Z"
+     "end_time": "2025-02-09T16:02:59.364428Z",
+     "start_time": "2025-02-09T16:02:59.347543Z"
     }
    },
    "id": "2fc5db855e0c2437"
@@ -830,8 +833,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:43:45.390827Z",
-     "start_time": "2025-02-09T11:43:34.234692Z"
+     "end_time": "2025-02-09T16:03:12.135456Z",
+     "start_time": "2025-02-09T16:03:00.429483Z"
     }
    },
    "id": "982af302917f4078"
@@ -847,8 +850,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:43:45.396173Z",
-     "start_time": "2025-02-09T11:43:45.391685Z"
+     "end_time": "2025-02-09T16:03:12.137368Z",
+     "start_time": "2025-02-09T16:03:12.136032Z"
     }
    },
    "id": "969074d24b19d883"
@@ -876,8 +879,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:43:45.402457Z",
-     "start_time": "2025-02-09T11:43:45.394021Z"
+     "end_time": "2025-02-09T16:03:12.148374Z",
+     "start_time": "2025-02-09T16:03:12.138436Z"
     }
    },
    "id": "f24bc7336a7f2f0"
@@ -1073,8 +1076,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:43:49.891551Z",
-     "start_time": "2025-02-09T11:43:49.138908Z"
+     "end_time": "2025-02-09T16:03:13.836345Z",
+     "start_time": "2025-02-09T16:03:12.857998Z"
     }
    },
    "id": "708b748294c0ad93"
@@ -1134,8 +1137,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:43:51.365220Z",
-     "start_time": "2025-02-09T11:43:51.128727Z"
+     "end_time": "2025-02-09T16:03:18.893442Z",
+     "start_time": "2025-02-09T16:03:18.720634Z"
     }
    },
    "id": "9b885a6a637d7a3c"
@@ -1163,15 +1166,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:43:52.816060Z",
-     "start_time": "2025-02-09T11:43:52.809627Z"
+     "end_time": "2025-02-09T16:03:20.381766Z",
+     "start_time": "2025-02-09T16:03:20.377015Z"
     }
    },
    "id": "9cae97dae5ec72d7"
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
@@ -1223,13 +1226,16 @@
     "plt.grid(False)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "#save fig\n",
+    "fig.savefig('confusion_matrix.svg')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:44:15.667889Z",
-     "start_time": "2025-02-09T11:44:15.543406Z"
+     "end_time": "2025-02-09T16:05:57.681504Z",
+     "start_time": "2025-02-09T16:05:57.502193Z"
     }
    },
    "id": "38799de75ffe62a5"
